--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         </header>
         <main>
             <div class="container">
-                <input type="text">
-                <button>Aggiungi</button>
+                <input type="text" v-model="newTask">
+                <input @click="addTask" type="button"  value="Aggiungi"> </button>
+                
             </div>
             <div class="container">
                 <ul class="todo_list">
